--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,9 @@
 	background-color: black;
 	box-sizing: border-box;
 	color: white;
-	height: 100vh;
 	padding: 0;
 	margin: 0;
+	min-height: 100vh;
 	border: "1px solid blue";
-	position: relative;
-	top: 0;
 }
+
